added csrf token, ajax setup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,7 @@ akka {
 # This must be changed for production, but we don't recommend you change it in this file.
 play.http.secret.key = "changeme"
 
+
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
 # ~~~~~
@@ -214,7 +215,7 @@ play.filters {
 
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
+  #enabled += filters.ExampleFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilters
@@ -246,6 +247,8 @@ play.filters {
   # or body of every form submitted, and also gets placed in the users session.
   # Play then verifies that both tokens are present and match.
   csrf {
+    #play.filters.disbale += "play.filters.csrf.CSRFFilter"
+
     # Sets the cookie to be sent only over HTTPS
     #cookie.secure = true
 
